Refactor Aside component into LeftSide and RightSide components
- Removed the original Aside component and its associated styles.
- Created LeftSide component to handle the menu and library sections.
- Created RightSide component to display user profile information & smth more.
- Updated App component to use LeftSide and RightSide instead of Aside.
- Added new SVG icons for navigation and notifications.
- Introduced new styles for the LeftSide and RightSide components.
- Updated Home component to reflect changes in structure and styles.
- Removed unused CSS files and icons to clean up the project.

--- a/beatbay/src/components/elements/Asides/_aside.scss
+++ b/beatbay/src/components/elements/Asides/_aside.scss
@@ -74,3 +74,36 @@
 .new__playlist-btn:hover {
   color: #fff;
 }
+
+.user-profile {
+  display: flex;
+  align-items: center;
+
+  &__name {
+    font-weight: 500;
+  }
+
+  &__status {
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 16px;
+
+    margin-top: 4px;
+
+    font-weight: 400;
+    font-size: .875rem;
+
+    span::after {
+      content: "";
+      position: absolute;
+      width: 5px;
+      height: 5px;
+      border-radius: 50%;
+      background: #ccc;
+      top: 50%;
+      left: 50%;
+      transform: translateY(-50%);
+    }
+  }
+}
