--- a/beatbay/src/styles/_base.scss
+++ b/beatbay/src/styles/_base.scss
@@ -66,3 +66,17 @@ code {
   display: grid;
   grid-template-columns: auto 1fr auto;
 }
+
+.btn {
+  padding: 14px;
+  max-height: 48px;
+
+  border-radius: 25%;
+  background: rgba(255, 255, 255, .08);
+
+  transition: background .1s ease;
+}
+
+.btn:hover {
+  background: rgba(255, 255, 255, .16);
+}
